--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "ISC",
   "private": false,
   "type": "module",
+  "typings": "index.d.ts",
   "engines": {
     "node": ">=20.4.0"
   },
