--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uah/postgres",
+  "name": "postgres",
   "author": "uah",
   "description": "Postgres client",
   "version": "0.0.1",
@@ -10,6 +10,7 @@
   "engines": {
     "node": ">=20.4.0"
   },
+  "main": "./index.js",
   "imports": {
     "#native": "./src/utils/native.js"
   },
