--- a/biome.json
+++ b/biome.json
@@ -21,6 +21,15 @@
       "recommended": true,
       "style": {
         "useTemplate": "off"
+      },
+      "complexity": {
+        "noThisInStatic": "off"
+      },
+      "suspicious": {
+        "noThenProperty": "off"
+      },
+      "correctness": {
+        "noConstantCondition": "off"
       }
     }
   },
